@@ -2,15 +2,15 @@
 Bug #33802 (throw Exception in error handler causes crash)
 --FILE--
 <?php
-set_error_handler('errorHandler', E_USER_ERROR);
-try{
+set_error_handler('errorHandler', E_USER_WARNING);
+try {
     test();
-}catch(Exception $e){
+} catch(Exception $e){
 }
 restore_error_handler();
 
-function test(){
-    trigger_error("error", E_USER_ERROR);
+function test() {
+    trigger_error("error", E_USER_WARNING);
 }
 
 function errorHandler($errno, $errstr, $errfile, $errline) {
