@@ -25,4 +25,6 @@ $fiber->resume();
 int(2)
 int(1)
 
+Deprecated: Passing E_USER_ERROR to trigger_error() is deprecated since 8.4, throw an exception or call exit with a string message instead in %s on line %d
+
 Fatal error: Fatal error in nested fiber in %sfatal-error-in-nested-fiber.php on line %d
