@@ -25,4 +25,6 @@ $fiber2->resume();
 int(1)
 int(2)
 
+Deprecated: Passing E_USER_ERROR to trigger_error() is deprecated since 8.4, throw an exception or call exit with a string message instead in %s on line %d
+
 Fatal error: Fatal error in fiber in %sfatal-error-with-multiple-fibers.php on line %d
