@@ -14,5 +14,7 @@ $fiber->start();
 
 ?>
 --EXPECTF--
+Deprecated: Passing E_USER_ERROR to trigger_error() is deprecated since 8.4, throw an exception or call exit with a string message instead in %s on line %d
+
 Fatal error: Bailout in fiber in %sgh10437.php on line %d
 NULL
