@@ -12,4 +12,6 @@ trigger_error(
 
 ?>
 --EXPECTF--
+Deprecated: Passing E_USER_ERROR to trigger_error() is deprecated since 8.4, throw an exception or call exit with a string message instead in %s on line %d
+
 Fatal error: class@anonymous%s ...now you don't! in %s on line %d
